feat: created database schema with dapper, migrations with fluent migrator and dependency injection configuration for infrastructure project

--- a/src/Backend/Evolutio.API/Evolutio.API.csproj
+++ b/src/Backend/Evolutio.API/Evolutio.API.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\..\Shared\Evolutio.Communication\Evolutio.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\Evolutio.Exception\Evolutio.Exception.csproj" />
     <ProjectReference Include="..\Evolutio.Application\Evolutio.Application.csproj" />
+    <ProjectReference Include="..\Evolutio.Infrastructure\Evolutio.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
