--- a/src/Backend/Evolutio.Infrastructure/Evolutio.Infrastructure.csproj
+++ b/src/Backend/Evolutio.Infrastructure/Evolutio.Infrastructure.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="FluentMigrator" Version="7.1.0" />
+    <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Evolutio.Domain\Evolutio.Domain\Evolutio.Domain.csproj" />
   </ItemGroup>
 
