--- a/src/Backend/Evolutio.Infrastructure/Evolutio.Infrastructure.csproj
+++ b/src/Backend/Evolutio.Infrastructure/Evolutio.Infrastructure.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="FluentMigrator" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.8" />
   </ItemGroup>
 
