--- a/src/Backend/Evolutio.Application/Evolutio.Application.csproj
+++ b/src/Backend/Evolutio.Application/Evolutio.Application.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageReference Include="Sqids" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Shared\Evolutio.Communication\Evolutio.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\Evolutio.Exception\Evolutio.Exception.csproj" />
     <ProjectReference Include="..\Evolutio.Domain\Evolutio.Domain\Evolutio.Domain.csproj" />
