--- a/src/Backend/Evolutio.Application/Evolutio.Application.csproj
+++ b/src/Backend/Evolutio.Application/Evolutio.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.11" />
     <PackageReference Include="Sqids" Version="3.1.0" />
   </ItemGroup>
 
