--- a/src/Frontend/Evolutio.Web/Evolutio.Web.csproj
+++ b/src/Frontend/Evolutio.Web/Evolutio.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.10" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="8.13.0" />
@@ -14,10 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Evolutio.Communication\Evolutio.Communication.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\User\" />
   </ItemGroup>
 
 </Project>
